# ReactingFlowSolver1D

./: README.md
code/: CMakeLists.txt  FluidSolver1D.h  Makefile  configuration.json  derivatives.cpp  derivatives.h  initial_conds.h  json_parser.cpp  json_parser.h  log_heap.cpp  log_heap.h  main01.cpp  main01.cxx  massif.out.828686  schemes.cpp  schemes.h  solver_funcs.cpp  solver_funcs.h  utils_solver.cpp  utils_solver.h  utils_solver_parallel.h
data/: README.md
data/cantera/: cantera.mod  cantera_funcs.mod  cantera_kinetics.mod  cantera_thermo.mod  cantera_transport.mod  fct.mod
data/cantera/base/: config.h
logfiles/: log_output_2025_04_16_22_38_56.txt  log_output_2025_04_16_22_45_38.txt  log_output_2025_04_17_01_27_54.txt  log_output_2025_04_17_01_36_52.txt  log_output_2025_04_17_01_42_08.txt  log_output_2025_04_17_01_59_56.txt  log_output_2025_04_17_03_55_52.txt  log_output_2025_04_17_03_56_17.txt  log_output_2025_04_17_03_58_35.txt
postprocessing/: README.md  plotting0005_heap.ipynb  plotting0006_gtcase.ipynb  plotting0006_hi1200.ipynb  plotting0006_hi1350.ipynb  plotting0006_stdwave.ipynb  plotting0006_timevserror.ipynb  plotting_case1.py  plotting_file0.ipynb  plotting_file1.py  plotting_file2.ipynb  plotting_file3.ipynb  plotting_tests.ipynb
